Various Bug Fixes for Campaign Member and Leads
- Change the way Campaign Members are created to prevent matching errors when a university loads Campaign Members outside of Interactions as well as with Interactions.
- Allow Lead fields to be written to Interaction before they are converted to Contacts. Without this enhancement, Lead fields cannot be mapped directly to Opportunities. They can still be mapped to Contacts using standard Lead field mappings.
- Write Lead back to the Interaction and leaves it when the process finds an existing Lead, so the ID can be used if needed.
- Change the way Affiliation fields are mapped to the Interaction. Use the Mapping Service instead of manually in the code.
- Fix issue where Leads would be out of sync with the contact list and apply data to the wrong Contact.
- Fix issue with Record Types for Plan__c where after adding the Record Type in the org the test wouldn't complete.

--- a/src/package.xml
+++ b/src/package.xml
@@ -30,6 +30,7 @@
         <members>Campaign.Campaign_Key__c</members>
         <members>Campaign.Campaign_Reference_ID__c</members>
         <members>CampaignMember.Campaign_Member_Key__c</members>
+        <members>CampaignMember.Lead_Contact_ID__c</members>
         <members>Contact.Constituent_ID__c</members>
         <members>Contact.Primary_Academic_Program__c</members>
         <members>Contact.Primary_Educational_Institution__c</members>
